<resources>
    <string name="app_name">Delivery Pigeon Partner</string>
    <string name="phone_number">Phone number *</string>
    <string name="otp">OTP code *</string>
    <string name="login">LOGIN</string>
    <string name="signup">Don`t have an account? <b>Signup</b></string>
    <string name="getOtp">SEND OTP</string>
    <string name="reserOtp">RESEND OTP</string>
    <string name="otp_invalid_aleart">The provided OTP is incorrect</string>
    <string name="chekbox_str">I agree with <font color='#1FA7D1'>Terms of use</font> of Delivery Pigeon</string>
    <string name="otp_receive">You will receive a 4 digit OTP code.</string>
    <string name="registration">Registration</string>
    <string name="submit">SUBMIT</string>
    <string name="provider_details">Provider details</string>
    <string name="upload_photo">Upload a photo</string>
    <string name="upload_info">Full facial features must be clearly visible</string>
    <string name="full_name">Full name</string>
    <string name="email">Email(Optional)</string>
    <string name="document_uplaod">Address proof</string>
    <string name="front_side_info">Front side of Aadhar card/Votar ID/ Driving License </string>
    <string name="back_side_info">Back side of Aadhar card/Votar ID/ Driving License </string>
    <string name="others_document">Other documents</string>
    <string name="add_bankdetails">Add Bank Details</string>
    <string name="pan_card">Front side of PAN Card</string>
    <string name="other">Other(Optional)</string>
    <string name="tab_order">Order</string>
    <string name="tab_support">Support</string>
    <string name="tab_profile">Profile</string>
    <string name="active_orders">Active Orders</string>
    <string name="current_orders">Current Orders</string>
    <string name="past_orders">Past Orders</string>
    <string name="hyper_local">Local and Hyper Local</string>
    <string name="pickup_point">Pickup Point</string>
    <string name="address">Address</string>
    <string name="pickup_address">Pickup Address</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="dummy_example">122 Regent Street, Kolkata 700014</string>
    <string name="view_details">View Details</string>
    <string name="price_text">₹40</string>
    <string name="phone_number_restriction_validation">Your account has been restricted. Kindly contact with the Administrator.</string>
    <string name="order_details">Order Details</string>
    <string name="heading_signature">Add Signature</string>
    <string name="capture_image_heading">Capture Image</string>
    <string name="start_order">Press to Start Order</string>
    <string name="drop_points">Drop Point</string>

    <string name="verify_otp">Verify OTP</string>
    <string name="add_signature">Capture Parcel Image</string>
    <string name="complete">Press to Complete Task</string>
    <string name="completed">Task Completed</string>
    <string name="comments">Comments</string>
    <string name="rating">Rating This Customer</string>
    <string name="give_rating">Give Your Rating</string>
    <string name="accept_order">Accept Order</string>
    <string name="order_started">Order Started</string>
    <string name="cancle">Cancel</string>
    <string name="label_ok">Yes</string>
    <string name="label_no">No</string>
    <string name="aleart_ok">OK</string>
    <string name="aleart_later">LATER</string>
    <string name="alert_no_data_message">No data available to show.</string>
    <string name="alert_create_phone">Please enter valid 10 digit phone number.</string>
    <string name="alert_create_otpvalidation">OTP field should not empty.</string>
    <string name="alert_terms_condition">Please accept our Terms and Condition.</string>
    <string name="logout_aleart_title">Logout</string>
    <string name="logout_aleart_message">Do you want to logout?</string>
    <string name="aleart_otp">Please put your OTP</string>
    <string name="aleart_signature_upload">Signature is uploaded successfully.</string>
    <string name="aleart_orderitem_complete">Task is completed.</string>
    <string name="payment_msg_1">Please collect ₹</string>
    <string name="payment_msg_2"> from customer and tap the accept below.</string>
    <string name="aleart_accept_payment">Your payment has been accepted.</string>
    <string name="notification_channel_id">default</string>
    <string name="aleart_accept_order">Do you want to accept this order?</string>
    <string name="aleart_order_start">Your order has been started.</string>
    <string name="aleart_rating_submit">Rating has been successfully submitted.</string>
    <string name="aleart_rating_comment">Please write some comment.</string>
    <string name="aleart_select_rating">Please select rating for this order.</string>
    <string name="alert_complete_payment_msg">Total payment amount was ₹</string>
    <string name="header_map">Map</string>
    <string name="order_accept_message">Your order has been accepted. Please check it in current order section.</string>
    <string name="save_text">Save</string>
    <string name="profile_edit_aleart">Your profile is updated successfully.</string>
    <string name="aleart_name">Please enter your name.</string>
    <string name="alert_otp">OTP submitted successfully.</string>
    <string name="signature_submit">Parcel image is uploaded successfully</string>
    <string name="other_document">Other Documents</string>
    <string name="update_aleart">Kindly update your app from the Google Playstore.</string>
    <string name="edit">Edit</string>
    <string name="device_gps_message">Please allow GPS on your device</string>

    //Upload validation aleart
    <string name="aleart_upload_addressproof">Please upload your font side of Adhar Card</string>
    <string name="aleart_upload_adharback">Please upload your back side of Adhar Card</string>
    <string name="aleart_upload_pancard">Please upload your PAN Card</string>
    <string name="alert_provider_name">Please enter your name.</string>
    <string name="alert_provider_email">Please enter your email.</string>
    <string name="alert_valid_email">The email must be a valid email address.</string>
    <string name="product_image_upload">Please upload the parcel image.</string>

    //Account Settings
    <string name="account_settings_header">Account Settings</string>
    <string name="documents">Documents</string>
    <string name="bank_details">Bank Details</string>

    //Bank Address save
    <string name="bandetails_header">Bank Details</string>
    <string name="accoubt_number_text">ACCOUNT NUMBER</string>
    <string name="ifsc_code_text">IFSC CODE</string>
    <string name="account_type">ACCOUNT TYPE</string>
    <string name="account_holder_name_text">ACCOUNT HOLDER NAME</string>

    //Bankdetails add aleart message
    <string name="aleart_account_number">Account number shouldnot be blank</string>
    <string name="aleart_ifsc_code">Ifsc should not be blank</string>
    <string name="aleart_account_type">Account type should not be blank.</string>
    <string name="aleart_accountholder_name">Name should not be blank.</string>
    <string name="aleart_add_bankdetails">Bank details are added successfully</string>

    //Payment History
    <string name="payment_history">Payment History</string>
    <string name="earning_history">Earning</string>
    <string name="from_admin">Settlement</string>
    <string name="bonus_history">Bonus</string>
    <string name="incentive_history">Incentive</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    //Accept payment aleart
    <string name="accept_order_before_payment">Please accept this order before collecting the payment</string>
    <string name="order_start_before_payment">Please start this order before collecting the payment</string>

    //Payment Done
    <string name="payment_complete">Payment Done</string>
    <string name="accept_payment">Accept Payment</string>
    <string name="accepted_payment">Payment has been accepted.</string>
    <string name="rate_order">Rate The Customer</string>
    <string name="payment_header">Payment</string>

    //Complete order
    <string name="order_complete_header">Order Complete</string>
    <string name="accept_order_beforecompmete_aleart">Please accept the order first.</string>
    <string name="order_complete">This order points already completed.</string>

    //Startorder Aleart
    <string name="start_order_aleart">Do you want to start this order?</string>
    <string name="accept_order_atfirst">Please accept this order.</string>
    <string name="start_order_atfirst">Please start this order.</string>


    //Notification
    <string name="notification_header">Notification</string>

    //Otp verification aleart
    <string name="otp_failed">OTP verification is failed.</string>
    <string name="profile_already_verified">Profile is already verified</string>
    <string name="network_error">Network is not available.Please try again later</string>
    <string name="alert_email">Email should not be empty</string>
    <string name="droppoints_complete_validation">OTP and Capture image need to verified.</string>
    <string name="otp_image_verification">Kindly verify OTP and Signature</string>

    //Rate app
    <string name="rate_app_validation">Please complete the order before giving rating.</string>


    //Profile verification
    <string name="profile_verification_aleart">Your profile is under review. Please wait until we complete the verification and approve your profile.</string>
    <string name="distance">Total Diatance: </string>
    <string name="special_instruction_heading"><b>Special Instructions:</b> </string>

    <string name="payment_collection_pickup_point">at Pickup point</string>
    <string name="payment_collection_drop_point">at Drop point</string>
    <string name="profile_invalid">The given data was invalid.</string>

    <string name="wrong_data_aleart">Something is going to wrong. Please try again later.</string>

    //Version name
    <string name="version_name">Version 2.2.8</string>
    <string name="job_already_accepted">This job has been accepeted by others provider</string>
    <string name="alert_permission">Permission is necessary to proceed further</string>

    <string name="identity_disclaimer">Print the documents above and always keep them with you. In case the police stop you, show them these documents. These documents allow you to deliver food and medicine.</string>

    <string name="aleart_pdf_download">PDF file is saved into the phone\'s  download folder.</string>


</resources>