<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_order">
    <fragment
        android:id="@+id/navigation_order"
        android:name="com.dev.pigeonproviderapp.Fragment.OrdersFrag"
        android:label="@string/tab_order"
        tools:layout="@layout/fragment_orders" />
    <fragment
        android:id="@+id/navigation_suport"
        android:name="com.dev.pigeonproviderapp.Fragment.SupportFrag"
        android:label="@string/tab_support"
        tools:layout="@layout/fragment_support" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.dev.pigeonproviderapp.Fragment.ProfileFrag"
        android:label="@string/tab_profile"
        tools:layout="@layout/fragment_profile" />


</navigation>