<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/loginBackcolor">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_field_height"
        android:id="@+id/et_phoneNumber"
        android:layout_marginLeft="@dimen/margine_size"
        android:layout_marginRight="@dimen/margine_size"
        android:background="@drawable/input_text_field"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:hint="@string/phone_number"
        android:gravity="center|left"
        android:fontFamily="@font/montserrat"
        android:paddingLeft="25dp"
        android:inputType="number"
        android:textSize="@dimen/text_size"
        android:textColor="@android:color/black"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_otpReceive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margine_size"
        android:layout_marginTop="@dimen/otpReceive_marginTop"
        android:layout_marginRight="@dimen/margine_size"
        android:text="@string/otp_receive"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size"
        android:fontFamily="@font/montserrat"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_phoneNumber">

    </TextView>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_field_height"
        android:id="@+id/et_otp"
        android:hint="@string/otp"
        android:gravity="center|left"
        android:paddingLeft="25dp"
        android:layout_marginLeft="@dimen/margine_size"
        android:layout_marginRight="@dimen/margine_size"
        android:fontFamily="@font/montserrat"
        android:background="@drawable/input_text_field"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/margine_top"
        app:layout_constraintTop_toBottomOf="@id/tv_otpReceive"
        />

    <TextView
        android:id="@+id/tv_getOtp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margine_top"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:text="@string/getOtp"
        android:textColor="@color/otptextColor"
        android:textSize="@dimen/text_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_otp">

    </TextView>

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/checkTerms"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/margine_top"
        android:text="@string/chekbox_str"
        android:layout_marginLeft="@dimen/margine_size"
        android:layout_marginRight="@dimen/margine_size"
        android:fontFamily="@font/montserrat"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/tv_getOtp">

    </CheckBox>
    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/input_field_height"
        android:id="@+id/btn_providerlogin"
        android:background="@drawable/login_button"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:layout_marginLeft="@dimen/margine_size"
        android:layout_marginRight="@dimen/margine_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/margine_top"
        android:fontFamily="@font/montserrat"
        app:layout_constraintTop_toBottomOf="@id/checkTerms">

    </Button>









</androidx.constraintlayout.widget.ConstraintLayout>