<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/ConstraintLayoutRoot"
    tools:context=".ActivityAll.ProviderRegistration.Registrationactivity"
    android:background="@color/loginBackcolor">



    <ImageView
        android:layout_width="@dimen/_160sdp"
        android:layout_height="@dimen/_120sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_30sdp"
        android:background="@drawable/splashnew_logo">

    </ImageView>



    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:id="@+id/et_phoneNumber"
        android:layout_marginLeft="@dimen/margine_size"
        android:layout_marginRight="@dimen/margine_size"
        android:layout_marginBottom="@dimen/_100sdp"
        android:background="@drawable/input_text_field"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:hint="@string/phone_number"
        android:singleLine="true"
        android:inputType="number"
        android:gravity="center|left"
        android:fontFamily="@font/montserrat"
        android:paddingLeft="25dp"
        android:textSize="@dimen/_12sdp"
        android:textColor="@android:color/black"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_otpReceive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margine_size"
        android:layout_marginTop="@dimen/otpReceive_marginTop"
        android:layout_marginRight="@dimen/margine_size"
        android:text="@string/otp_receive"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_10sdp"
        android:fontFamily="@font/montserrat"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_phoneNumber">

    </TextView>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:id="@+id/et_otp"
        android:hint="@string/otp"
        android:gravity="center|left"
        android:textSize="@dimen/_12sdp"
        android:singleLine="true"
        android:inputType="number"
        android:paddingLeft="25dp"
        android:layout_marginLeft="@dimen/margine_size"
        android:layout_marginRight="@dimen/margine_size"
        android:fontFamily="@font/montserrat"
        android:background="@drawable/input_text_field"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/margine_top"
        app:layout_constraintTop_toBottomOf="@id/tv_otpReceive"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rl_otp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/_5sdp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/et_otp">

        <TextView
            android:id="@+id/tv_getOtp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/getOtp"
            android:textColor="@color/otptextColor"
            android:textSize="@dimen/_12sdp">

        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reserOtp"
            android:visibility="gone"
            android:padding="@dimen/_10sdp"
            android:gravity="center"
            android:id="@+id/tv_resendOtp"
            android:textColor="@color/otptextColor"
            android:textSize="@dimen/_12sdp"
            android:fontFamily="@font/montserrat"
            >
        </TextView>

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:id="@+id/ll_termsofUse"
        app:layout_constraintTop_toBottomOf="@id/rl_otp">
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkTerms"
            android:button="@drawable/checkbox_selector_trainer_gen"
            android:layout_marginLeft="@dimen/_10sdp"
            android:textSize="@dimen/_10sdp"
            android:backgroundTint="@color/header_color"
            android:fontFamily="@font/montserrat"
            android:textColor="@android:color/black"
            >

        </CheckBox>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_terms_condition"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:paddingRight="@dimen/_20sdp"
            android:text="@string/chekbox_str"
            android:fontFamily="@font/montserrat"
            android:textSize="@dimen/_10sdp"
            android:textColor="@android:color/black"
            />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:id="@+id/btn_registration"
        android:background="@drawable/login_button"
        android:text="@string/submit"
        android:textColor="@android:color/white"
        android:layout_marginLeft="@dimen/margine_size"
        android:layout_marginRight="@dimen/margine_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/margine_top"
        android:textSize="@dimen/_10sdp"
        android:fontFamily="@font/montserrat"
        app:layout_constraintTop_toBottomOf="@id/ll_termsofUse">

    </Button>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_app_version"
        android:layout_marginLeft="10dp"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/_25sdp"
        android:paddingRight="@dimen/_20sdp"
        android:text="@string/version_name"
        android:fontFamily="@font/montserrat"
        android:textSize="@dimen/_9sdp"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/btn_registration"
        />



</androidx.constraintlayout.widget.ConstraintLayout>