<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragment.OrdersFrag"
    android:background="@color/background_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:background="@color/header_color"
            android:id="@+id/relative_header">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Order"
                android:gravity="center_vertical"
                android:textSize="@dimen/_14sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:fontFamily="@font/montserrat"
                android:id="@+id/tv_dashboard"
                android:layout_centerInParent="true"
                android:textColor="@android:color/white"/>

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginRight="10dp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:id="@+id/img_noti"
                android:background="@drawable/notification_icon"
                />


        </RelativeLayout>

        <com.google.android.material.tabs.TabLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabTextAppearance="@style/MyCustomTextAppearance"
            android:id="@+id/tablayout"
            android:background="@color/otptextColor"
            android:minHeight="?attr/actionBarSize"
            app:tabSelectedTextColor="@android:color/white"
            app:tabTextColor="@color/tab_selected_color">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/active_orders"
                android:textSize="@dimen/_10sdp"
                android:id="@+id/tabActiveOrder"/>

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_orders"
                android:textSize="@dimen/_10sdp"
                android:id="@+id/tabCurrentOrders"/>

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/past_orders"
                android:textSize="@dimen/_10sdp"
                android:id="@+id/tabPastOrders"/>

        </com.google.android.material.tabs.TabLayout>
        <androidx.viewpager.widget.ViewPager
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/viewPager">

        </androidx.viewpager.widget.ViewPager>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>