<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".ActivityAll.ProviderRating.RatingActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/ll_header"
            android:background="@color/header_color"
            android:orientation="horizontal"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:gravity="center|left"
                android:id="@+id/ll_back"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="28dp"
                    android:layout_marginLeft="15dp"
                    android:background="@drawable/left_flat_arrow"
                    />


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="2.1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_catName"
                    android:text="@string/rating"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_14sdp"
                    android:fontFamily="@font/montserrat"
                    >

                </TextView>


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="center">

            </LinearLayout>
        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_5sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/white_shadowshape"
                android:layout_marginTop="@dimen/_5sdp"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="@dimen/_120sdp"
                    android:layout_height="@dimen/_120sdp"
                    android:background="@drawable/app_logo"
                    android:layout_marginTop="@dimen/_10sdp"
                    />

                <TextView
                    android:id="@+id/tv_otpReceive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/give_rating"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_12sdp"
                    android:fontFamily="@font/montserrat"
                   >

                </TextView>

                <RatingBar
                    style="@style/CustomRatingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numStars="5"
                    android:stepSize="0.1"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center"
                    android:progressTint="@color/otptextColor"
                    android:id="@+id/ratingBar"
                    />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_15sdp">

                </RelativeLayout>
            </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/white_shadowshape"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:orientation="vertical">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_120sdp"
                        android:id="@+id/et_review_comments"
                        android:padding="@dimen/_10sdp"
                        android:gravity="center|top|left"
                        android:hint="@string/comments"
                        android:textColorHint="@color/fadeBlackColor"
                        android:fontFamily="@font/montserrat"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginLeft="@dimen/_15sdp"
                        android:layout_marginRight="@dimen/_15sdp"
                        android:background="@drawable/commentbox_shape"
                        android:textSize="@dimen/_12sdp"
                        android:inputType="textPersonName"
                        android:textColor="@color/fadeBlackColor"
                        >

                    </EditText>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_10sdp">

                    </RelativeLayout>

                </LinearLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:id="@+id/btn_reviewSubmit"
                    android:background="@drawable/login_button"
                    android:text="@string/submit"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_30sdp"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_12sdp"
                    android:fontFamily="@font/montserrat"
                    >

                </androidx.appcompat.widget.AppCompatButton>



            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>